--- a/src/components/resources/resource/resource.styles.css
+++ b/src/components/resources/resource/resource.styles.css
@@ -42,7 +42,7 @@
 .resource-right ul{
     text-align: left;
     list-style-type: square;
-    font-size: 12px;
+    font-size: .68em;
 }
 
 .resource-left img{
