--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,21 @@
+@media screen and (min-width: 600px) {
+  .App{
+    width: calc(100vw - .4vw);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .App{
+    width: 100%
+  }
+}
+
 .App {
   text-align: center;
   font-family: 'Prata', serif;
   font-weight: bold;
-  height: 100%;
-  padding-top: 5%;
-  width: 100%;
+  height: calc(100% - 15vh);
+  padding-top: 3vw;
   position: relative;
   padding-bottom: 15vh;
   min-height: 100%
