--- a/src/components/footer/footer.styles.css
+++ b/src/components/footer/footer.styles.css
@@ -28,7 +28,7 @@
 }
 
 .footer-box__right{
-    font-size: 1vh;
+    font-size: .7vh;
     padding: 3vh;
     color: white !important;
     cursor: default
