--- a/src/components/resources/new-edit-resource/new-edit-resource.styles.css
+++ b/src/components/resources/new-edit-resource/new-edit-resource.styles.css
@@ -41,8 +41,7 @@
 .right-edit{
     font-size: 2.5vh;
     max-width: 100%;
-    padding-right: 6%;
-    padding-top: 6%
+    padding: 3%;
 }
 
 .right-edit li{
