--- a/src/components/add-button/add-button.styles.css
+++ b/src/components/add-button/add-button.styles.css
@@ -5,6 +5,10 @@
     -moz-user-select: none;
     -webkit-user-select: none;
     user-select: none;
+    padding: 0em .2em 0em .25em;
+    margin-right: .3em;
+    transition-duration: .3s;
+    border-radius: 50%
 }
 
 .detail-add__symbol.active{
