--- a/src/components/detail-text/detail-text.styles.css
+++ b/src/components/detail-text/detail-text.styles.css
@@ -14,6 +14,11 @@
     font-weight: 700;
 }
 
-.detail-text__delete{
-    display: flex
+.detail-text-line{
+    display: flex;
+    padding-top: .3em
+}
+
+.detail-text-line p{
+    padding-top: .3em
 }
