--- a/src/pages/contact-page/contact-page.styles.css
+++ b/src/pages/contact-page/contact-page.styles.css
@@ -3,10 +3,5 @@
     flex-direction: column;
     margin-left: 20%;
     margin-right: 20%;
-}
-
-.contact-page textarea{
-    height: 25vh;
-    width: 100%;
-    resize: none;
+    min-height: calc(100vh - 15vh);
 }
